--- a/produtos.html
+++ b/produtos.html
@@ -103,14 +103,14 @@
 		    <div class="modal-content">
 		      <div class="modal-header">
 		        <h5 class="modal-title" id="exampleModalLabel">Filtros</h5>
-		        <span class="limpaFiltro"><a rel="limpar">Limpar filtros</a></span>
+		        <!-- <span class="limpaFiltro"><a rel="limpar">Limpar filtros</a></span> -->
 		      </div>
 		      <div class="modal-body">
 		        <ul class="filtroMobile">
 		        	<li class="filtroMobileItem filtroMobActive" rel="todos">
 		        		Todos produtos
 		        	</li>
-		        	<li class="filtroMobileItem" rel="todos">
+		        	<li class="filtroMobileItem" rel="verao">
 		        		Forrageiras de verão
 		        	</li>
 		        	<li class="filtroMobileItem" rel="leguminosas">
