--- a/cotar.html
+++ b/cotar.html
@@ -123,7 +123,7 @@
 				  	</div>
 				  	<div class="form-group col-12">
 				      <label class="txtLabelForm" for="inputlDado" id="labelDado">CPF</label>
-				      <input type="email" class="form-control inputDefault" id="inputDado" name="cpf" placeholder="000.000.000-00" required="inputDado">
+				      <input type="text" class="form-control inputDefault" id="inputDado" name="cpf" placeholder="000.000.000-00" required="inputDado">
 				      <div class="invalid-feedback">
 				        Campo obrigatório
 				      </div>
