--- a/parceiro.html
+++ b/parceiro.html
@@ -155,8 +155,8 @@
 				    </div>
 				    <div class="form-group col-12">
 				      <label class="txtLabelForm" for="inputEstado">UF</label>
-				      <select id="inputEstado" class="form-control inputDefault" name="estado" required="inputEstado">
-				        <option selected>Estado</option>
+				      <select id="inputEstado" class="form-control inputDefault" name="estado" required="inputEstado" required>
+				        <option value="" disabled selected>Estado</option>
 				        <option value="AC">AC</option>
 						<option value="AL">AL</option>
 						<option value="AP">AP</option>
