--- a/contato.html
+++ b/contato.html
@@ -85,6 +85,24 @@
   	</div>
 </nav>
 
+<div class="container overlayNotifica" style="display: none;">
+	<div class="row">
+		<div class="col-12 col-md-12 col-sm-12 col-lg-12 col-xl-12">
+			<div class="toast__container">
+				<div class="toast toast--green" style="opacity: 0; display: block;">
+					<div class="toast__content">
+						<p class="toast__type">Enviado</p>
+						<p class="toast__message">Email enviado com sucesso!</p>
+					</div>
+					<div class="toast__close"> 
+						X 
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
 <section id="partner">
 	<div class="container">
 		<div class="row">
