--- a/cotar.html
+++ b/cotar.html
@@ -85,6 +85,24 @@
   	</div>
 </nav>
 
+<div class="container overlayNotifica" style="display: none;">
+	<div class="row">
+		<div class="col-12 col-md-12 col-sm-12 col-lg-12 col-xl-12">
+			<div class="toast__container">
+				<div class="toast toast--green" style="opacity: 0; display: block;">
+					<div class="toast__content">
+						<p class="toast__type">Enviado</p>
+						<p class="toast__message">Email enviado com sucesso!</p>
+					</div>
+					<div class="toast__close"> 
+						X 
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
 <section id="partner">
 	<div class="container">
 		<div class="row">
@@ -158,8 +176,8 @@
 				    </div>
 				    <div class="form-group col-12">
 				      <label class="txtLabelForm" for="inputEstado">UF</label>
-				      <select id="inputEstado" name="estado" class="form-control inputDefault">
-				        <option selected>Estado</option>
+				      <select id="inputEstado" name="estado" class="form-control inputDefault" required>
+				        <option value="" disabled selected>Estado</option>
 				        <option value="AC">AC</option>
 						<option value="AL">AL</option>
 						<option value="AP">AP</option>
@@ -302,9 +320,9 @@
 				  <div class="form-row">
 				  	<span class="txtRural">Possui Inscrição de Produtor Rural?</span>
 				  	<div class="form-group col-12 text-center">
-				  		<input id="ruralSim" name="rural" type="radio" value="Sim" placeholder="Sim" required="ruralSim">
+				  		<input id="ruralSim" name="rural" type="radio" value="Sim" placeholder="Sim" required="rural">
 				  		<label class="txtLabelForm" for="ruralSim">Sim</label>
-				  		<input id="ruralNao" name="rural" type="radio" value="Não" placeholder="Não" required="ruralNao">
+				  		<input id="ruralNao" name="rural" type="radio" value="Não" placeholder="Não" required="rural">
 				  		<label class="txtLabelForm" for="ruralNao">Não</label>
 				  	</div>
 				  </div>
