--- a/parceiro.html
+++ b/parceiro.html
@@ -85,6 +85,24 @@
   	</div>
 </nav>
 
+<div class="container overlayNotifica" style="display: none;">
+	<div class="row">
+		<div class="col-12 col-md-12 col-sm-12 col-lg-12 col-xl-12">
+			<div class="toast__container">
+				<div class="toast toast--green" style="opacity: 0; display: block;">
+					<div class="toast__content">
+						<p class="toast__type">Enviado</p>
+						<p class="toast__message">Email enviado com sucesso!</p>
+					</div>
+					<div class="toast__close"> 
+						X 
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
 <section id="partner">
 	<div class="container">
 		<div class="row">
@@ -123,7 +141,7 @@
 				  	</div>
 				  	<div class="form-group col-12">
 				      <label class="txtLabelForm" for="inputlDado" id="labelDado">CPF</label>
-				      <input id="inputDado" type="email" class="form-control inputDefault" name="cpf" placeholder="000.000.000-00" required="inputDado">
+				      <input id="inputDado" type="text" class="form-control inputDefault" name="cpf" placeholder="000.000.000-00" required="inputDado">
 				      <div class="invalid-feedback">
 				        Campo obrigatório
 				      </div>
@@ -155,7 +173,7 @@
 				    </div>
 				    <div class="form-group col-12">
 				      <label class="txtLabelForm" for="inputEstado">UF</label>
-				      <select id="inputEstado" class="form-control inputDefault" name="estado" required="inputEstado" required>
+				      <select id="inputEstado" class="form-control inputDefault" name="estado" required>
 				        <option value="" disabled selected>Estado</option>
 				        <option value="AC">AC</option>
 						<option value="AL">AL</option>
