--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="DuValle Sementes tem como objetivo manter a alta pureza e vigor em todas as variedades de sementes forrageiras e leguminosas.">
-	<meta name="keywords" content="sementes forrageiras, sementes de pastagem, duvalle, sementes, sementes para gado, grama para gado, semente para pastagem">
+	<meta name="keywords" content="sementes forrageiras, sementes de pastagem, duvalle, sementes, sementes para gado, grama para gado, sementes para pastagem, DuValle, duvalle sementes, semente, grama, pastagem, sementes de inverno, sementes de verão">
+	<meta name="abstract" content="Sementes DuValle">
+	<meta name="robots" content="index, follow">
+	<meta name="robots" content="ALL">
+	<meta name="application-name" content="duvalle.agr.br">
 	<meta property="og:image" content="http://duvalle.agr.br/assets/imgs/logos/logo-w-text.svg">
 	<meta property="og:image:type" content="image/svg">
 	<meta property="og:image:width" content="800"> 
