--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="DuValle Sementes tem como objetivo manter a alta pureza e vigor em todas as variedades de sementes forrageiras e leguminosas.">
-	<meta name="keywords" content="sementes forrageiras, sementes de pastagem, duvalle, sementes, sementes para gado, grama para gado, sementes para pastagem, DuValle, duvalle sementes, semente, grama, pastagem, sementes de inverno, sementes de verão">
+	<meta name="keywords" content="sementes forrageiras, sementes de pastagem, duvalle, sementes, sementes para gado, grama para gado, sementes para pastagem, DuValle, duvalle sementes, semente, grama, pastagem, sementes de inverno, sementes de verão, leguminosas, sementes leguminosas">
 	<meta name="abstract" content="Sementes DuValle">
 	<meta name="robots" content="index, follow">
 	<meta name="robots" content="ALL">
